# TE3002B

./: README.md  main.cpp
differential_wheeled_robot/config/: controller_params.yaml
differential_wheeled_robot/src/: controller.cpp  point_generator.cpp
differential_wheeled_robot_ws/install/: local_setup.sh  setup.sh  setup.zsh
differential_wheeled_robot_ws/install/differential_wheeled_robot/include/differential_wheeled_robot/differential_wheeled_robot/msg/: diff_error.h  diff_error.hpp  path.h  path.hpp  (+3 more)
differential_wheeled_robot_ws/install/differential_wheeled_robot/lib/differential_wheeled_robot/: odometry  point_generator
differential_wheeled_robot_ws/install/differential_wheeled_robot/share/differential_wheeled_robot/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
differential_wheeled_robot_ws/install/differential_wheeled_robot/share/differential_wheeled_robot/cmake/: ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  differential_wheeled_robot__rosidl_typesupport_cExport.cmake  differential_wheeled_robot__rosidl_typesupport_cppExport.cmake  differential_wheeled_robot__rosidl_typesupport_introspection_cExport-noconfig.cmake  differential_wheeled_robot__rosidl_typesupport_introspection_cExport.cmake  export_differential_wheeled_robot__rosidl_generator_cExport.cmake  export_differential_wheeled_robot__rosidl_generator_cppExport.cmake  export_differential_wheeled_robot__rosidl_generator_pyExport.cmake  export_differential_wheeled_robot__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_differential_wheeled_robot__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
differential_wheeled_robot_ws/install/differential_wheeled_robot/share/differential_wheeled_robot/config/: controller_params.yaml  point_generator_params.yaml
differential_wheeled_robot_ws/install/differential_wheeled_robot/share/differential_wheeled_robot/msg/: DiffError.idl  Path.idl
differential_wheeled_robot_ws/log/: latest_build
differential_wheeled_robot_ws/src/differential_wheeled_robot/: CMakeLists.txt
differential_wheeled_robot_ws/src/differential_wheeled_robot/config/: odometry_params.yaml  point_generator_params.yaml
differential_wheeled_robot_ws/src/differential_wheeled_robot/launch/: launch.py
differential_wheeled_robot_ws/src/differential_wheeled_robot/src/: controller.cpp  odometry.cpp
fog_ws/src/fog_pkg/: package.xml  setup.cfg  setup.py
fog_ws/src/fog_pkg/fog_pkg/: classification.py
lane_processing/: CMakeLists.txt
lane_processing/src/: main.cpp
lane_processing/src/lib/: cv_wrapper.cpp  cv_wrapper.h  lane_funcs.cpp  lane_params.h
lane_processing_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
lane_processing_ws/install/lane_processing/lib/lane_processing/: lane_detection  lane_processing
lane_processing_ws/install/lane_processing/share/lane_processing/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
lane_processing_ws/install/lane_processing/share/lane_processing/cmake/: ament_cmake_export_targets-extras.cmake  export_lane_processing__rosidl_generator_cppExport.cmake  export_lane_processing__rosidl_generator_pyExport.cmake  export_lane_processing__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  lane_processing__rosidl_typesupport_cppExport-noconfig.cmake  lane_processing__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
lane_processing_ws/install/lane_processing/share/lane_processing/msg/: DiffError.msg
lane_processing_ws/log/: latest_build
lane_processing_ws/src/lane_processing/: CMakeLists.txt
lane_processing_ws/src/lane_processing/include/lane_processing/: cv_wrapper.h  lane_funcs.h  lane_params.h  perspective.h
lane_processing_ws/src/lane_processing/src/: lane_detection.cpp
lane_processing_ws/src/lane_processing/src/lib/: cv_wrapper.cpp  lane_funcs.cpp  perspective.cpp  perspective.h
puzzle_ws/install/: local_setup.sh  setup.sh
puzzle_ws/install/cv_bridge/share/cv_bridge/: local_setup.sh  package.sh
puzzle_ws/install/image_geometry/share/image_geometry/: local_setup.sh  package.sh
puzzle_ws/install/opencv_tests/lib/opencv_tests/: broadcast  rosfacedetect  source
puzzle_ws/install/opencv_tests/share/opencv_tests/: package.sh
puzzle_ws/install/puzzle_pkg/lib/puzzle_pkg/: cam_source  lane_detection  odometry  signal_handle
puzzle_ws/install/puzzle_pkg/share/puzzle_pkg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
puzzle_ws/install/puzzle_pkg/share/puzzle_pkg/cmake/: ament_cmake_export_libraries-extras.cmake  export_puzzle_pkg__rosidl_generator_cExport-noconfig.cmake  export_puzzle_pkg__rosidl_generator_cppExport.cmake  export_puzzle_pkg__rosidl_generator_pyExport.cmake  export_puzzle_pkg__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_puzzle_pkg__rosidl_typesupport_fastrtps_cExport.cmake  export_puzzle_pkg__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  puzzle_pkg__rosidl_typesupport_cExport.cmake  puzzle_pkg__rosidl_typesupport_cppExport.cmake  puzzle_pkg__rosidl_typesupport_introspection_cExport.cmake
puzzle_ws/install/puzzle_pkg/share/puzzle_pkg/config/: controller_params.yaml  odometry_params.yaml
puzzle_ws/install/puzzle_pkg/share/puzzle_pkg/launch/: launch.py
puzzle_ws/install/vision_opencv/share/vision_opencv/: local_setup.sh  package.sh
puzzle_ws/log/: latest_build
puzzle_ws/src/: .gitignore
puzzle_ws/src/puzzle_pkg/: CMakeLists.txt
puzzle_ws/src/puzzle_pkg/config/: controller_params.yaml  odometry_params.yaml
puzzle_ws/src/puzzle_pkg/include/puzzle_pkg/: cv_wrapper.h  lane_funcs.h  perspective.h
puzzle_ws/src/puzzle_pkg/src/control/: controller.cpp  odometry.cpp
puzzle_ws/src/puzzle_pkg/src/vision/: cam_source.cpp  lane_detection.cpp  signal_handle.cpp
puzzle_ws/src/puzzle_pkg/src/vision/lib/: cv_wrapper.cpp  lane_funcs.cpp  perspective.cpp
(+34 files in other folders)
